cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("compose-${base}" "${source}")
    set_property(TARGET "compose-${base}" PROPERTY CXX_STANDARD 17)
    target_link_libraries("compose-${base}" "compose")
    add_test("compose-${base}" "compose-${base}")
endforeach()
